[tool.poetry]
name = "mrbig"
version = "0.1.0"
description = ""
authors = ["Tomasz Niedziela-Brach <niedziela.brach@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^1.10.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
